--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello Heath McCullough
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Heath McCullough CSCE 190</title>
+    </head>
+    <body>
+        <hl>Heath McCullough CSCE 190 Site</hl>
+
+        <section> class = "assignment">
+            <img> src="Pictures\Screenshots\Screenshot (3).png">
+        </section>
+    </body>
+</html>
