--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <hl>Heath McCullough CSCE 190 Site</hl>
 
-        <section> class = "assignment">
-            <img> src="Pictures\Screenshots\Screenshot (3).png">
+        <section class = "assignment">
+            <img src="Pictures\Screenshots\Screenshot (3).png">
         </section>
     </body>
 </html>
