--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <hl>Heath McCullough CSCE 190 Site</hl>
 
         <section class = "assignment">
-            <img src="Screenshots\Screenshot (3).png">
+            <img src="images\Screenshot (3).png">
         </section>
     </body>
 </html>
