--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <hl>Heath McCullough CSCE 190 Site</hl>
 
         <section class = "assignment">
-            <img src="images\Screenshot (3).png">
+            <img src="https://cdn.discordapp.com/attachments/581623641217957890/1015752935352840243/Screenshot_3.png">
         </section>
     </body>
 </html>
