--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
         <section class = "assignment">
             <img src="C:\Users\Heath\Documents\csce190\Screenshot (3).png">
         </section>
+
+        <!--Affinity Diagram-->
+        <section class = "assignment">
+            <a href="files/csce190-jamboard.pdf"><img src="images/csce190-jamboard.png"></a>
+            <section class="ass_details"
+                <a href="files/csce190-jamboard.pdf"><h2>Affinity Diagram: Laundromat Tracker</h2></a>
+                <p>
+                    Me and my group brainstormed together ideas for how an app that showed availability in a laundromat would work
+                </p>
+            </section>
+        </section>
     </body>
 </html>
