--- a/index.html
+++ b/index.html
@@ -6,17 +6,36 @@
     <body>
         <hl>Heath McCullough CSCE 190 Site</hl>
 
+        <!--Problem Statement Assignment-->
         <section class = "assignment">
-            <img src="C:\Users\Heath\Documents\csce190\Screenshot (3).png">
+            <a href="files/Problem Statement Group - CSCE190 - Google Docs.pdf"><img src="images/problemstatement.png"></a>
+            <section class="ass_details">
+                <a href="files/Problem Statement Group - CSCE190 - Google Docs.pdf"><h2>Problem Statement: Laundromat Availability</h2></a>
+                <p>
+                    People who use public washing and laundry machines never know if or when a unit will be open. This leads to frustration from many people who go all the way to these units, not knowing that they wouldn’t be able to use them. Our goal is to create a solution to this problem and have a way for people to know whether a washing or laundry machine unit is open before they go to them.
+
+                </p>
+            </section>
         </section>
 
         <!--Affinity Diagram-->
-        <section class = "assignment">
+        <section class ="assignment">
             <a href="files/csce190-jamboard.pdf"><img src="images/csce190-jamboard.png"></a>
-            <section class="ass_details"
+            <section class="ass_details">
                 <a href="files/csce190-jamboard.pdf"><h2>Affinity Diagram: Laundromat Tracker</h2></a>
                 <p>
-                    Me and my group brainstormed together ideas for how an app that showed availability in a laundromat would work
+                    Me and my group brainstormed together ideas for how an app that showed availability in a laundromat would work.
+                </p>
+            </section>
+        </section>
+
+        <!--Persona Assignment-->
+        <section class ="assignment">
+            <a href="files/persona.pdf"><img src="images/persona.png"></a>
+            <section class="ass_details">
+                <a href="files/persona.pdf"><h2>Persona: Tina Kelly</h2></a>
+                <p>
+                    A persona of a typical user of the laundromat availability app.
                 </p>
             </section>
         </section>
