--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Heath McCullough CSCE 190</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <hl>Heath McCullough CSCE 190 Site</hl>
