--- a/index.html
+++ b/index.html
@@ -40,5 +40,16 @@
                 </p>
             </section>
         </section>
+
+        <!--Storyboard Assignment-->
+        <section class ="assignment">
+            <a href="files/storyboard csce190.pdf"><img src="images/storyboard.png"></a>
+            <section class="ass_details">
+                <a href="files/storyboard csce190.pdf"><h2>Storyboard: Using the Laundromat App</h2></a>
+                <p>
+                    A storyboard of a situation of when person would need to use our app.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
