--- a/index.html
+++ b/index.html
@@ -51,5 +51,16 @@
                 </p>
             </section>
         </section>
+
+        <!--Sketches Assignment-->
+        <section class ="assignment">
+            <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
+            <section class="ass_details">
+                <a href="files/sketches.pdf"><h2>Sketches: How The App Operates</h2></a>
+                <p>
+                    Sketches that show how the app looks and works.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
