--- a/index.html
+++ b/index.html
@@ -5,62 +5,63 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <hl>Heath McCullough CSCE 190 Site</hl>
+        <h1>Heath McCullough CSCE 190 Site</hl>
 
-        <!--Problem Statement Assignment-->
-        <section class = "assignment">
-            <a href="files/Problem Statement Group - CSCE190 - Google Docs.pdf"><img src="images/problemstatement.png"></a>
-            <section class="ass_details">
+        <div class="assignments">
+            <!--Problem Statement Assignment-->
+            <section class = "assignment">
                 <a href="files/Problem Statement Group - CSCE190 - Google Docs.pdf"><h2>Problem Statement: Laundromat Availability</h2></a>
-                <p>
-                    People who use public washing and laundry machines never know if or when a unit will be open. This leads to frustration from many people who go all the way to these units, not knowing that they wouldn’t be able to use them. Our goal is to create a solution to this problem and have a way for people to know whether a washing or laundry machine unit is open before they go to them.
+                <a href="files/Problem Statement Group - CSCE190 - Google Docs.pdf"><img src="images/problemstatement.png"></a>
+                    <p>
+                        People who use public washing and laundry machines never know if or when a unit will be open. This leads to frustration from many people who go all the way to these units, not knowing that they wouldn’t be able to use them. Our goal is to create a solution to this problem and have a way for people to know whether a washing or laundry machine unit is open before they go to them.
 
-                </p>
+                    </p>
             </section>
-        </section>
 
-        <!--Affinity Diagram-->
-        <section class ="assignment">
-            <a href="files/csce190-jamboard.pdf"><img src="images/csce190-jamboard.png"></a>
-            <section class="ass_details">
+            <!--Affinity Diagram-->
+            <section class ="assignment">
                 <a href="files/csce190-jamboard.pdf"><h2>Affinity Diagram: Laundromat Tracker</h2></a>
-                <p>
-                    Me and my group brainstormed together ideas for how an app that showed availability in a laundromat would work.
-                </p>
+                <a href="files/csce190-jamboard.pdf"><img src="images/csce190-jamboard.png"></a>
+                    <p>
+                        Me and my group brainstormed together ideas for how an app that showed availability in a laundromat would work.
+                    </p>
             </section>
-        </section>
 
-        <!--Persona Assignment-->
-        <section class ="assignment">
-            <a href="files/persona.pdf"><img src="images/persona.png"></a>
-            <section class="ass_details">
+            <!--Persona Assignment-->
+            <section class ="assignment">
                 <a href="files/persona.pdf"><h2>Persona: Tina Kelly</h2></a>
-                <p>
-                    A persona of a typical user of the laundromat availability app.
-                </p>
+                <a href="files/persona.pdf"><img src="images/persona.png"></a>
+                    <p>
+                        A persona of a typical user of the laundromat availability app.
+                    </p>
             </section>
-        </section>
 
-        <!--Storyboard Assignment-->
-        <section class ="assignment">
-            <a href="files/storyboard csce190.pdf"><img src="images/storyboard.png"></a>
-            <section class="ass_details">
+            <!--Storyboard Assignment-->
+            <section class ="assignment">
                 <a href="files/storyboard csce190.pdf"><h2>Storyboard: Using the Laundromat App</h2></a>
-                <p>
-                    A storyboard of a situation of when person would need to use our app.
-                </p>
+                <a href="files/storyboard csce190.pdf"><img src="images/storyboard.png"></a>
+                    <p>
+                        A storyboard of a situation of when person would need to use our app.
+                    </p>
             </section>
-        </section>
 
-        <!--Sketches Assignment-->
-        <section class ="assignment">
-            <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
-            <section class="ass_details">
+            <!--Sketches Assignment-->
+            <section class ="assignment">
                 <a href="files/sketches.pdf"><h2>Sketches: How The App Operates</h2></a>
+                <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
+                    <p>
+                        Sketches that show how the app looks and works.
+                    </p>
+            </section>
+
+            <!--Paper Prototype Assignment-->
+            <section class ="assignment">
+                <a href="https://www.youtube.com/watch?v=ZtO-euj_Fqs&ab_channel=DylanWaldrup"><h2>Paper Prototype</h2></a>
+                <a href="https://www.youtube.com/watch?v=ZtO-euj_Fqs&ab_channel=DylanWaldrup"><img src="images/paperprototype.png"></a>
                 <p>
-                    Sketches that show how the app looks and works.
+                    A paper prototype to be a visual representation of how the app will look and operate.
                 </p>
             </section>
-        </section>
+        </div>
     </body>
 </html>
