--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                     A paper prototype to be a visual representation of how the app will look and operate.
                 </p>
             </section>
+
+            <!--Hi-fi Prototype Assignment-->
+            <section class ="assignment">
+                <a href="files/lofiprototype/preview.html"><h2>Hi-fi Prototype</h2></a>
+                <a href="files/lofiprototype/preview.html"><img src="images/lofiprototype.png"></a>
+                <p>
+                    A hi-fi prototype to show a realistic look at what our app could possibly look like on an iOS device.
+                </p>
+            </section>
         </div>
     </body>
 </html>
